--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="md zakirul islam resume">
     <meta name="author" content="md zakirul islam">
-	<title>xCoder.io</title>
+	<title>zakirul islam</title>
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
@@ -19,9 +19,9 @@
       	
 
       	<div class="jumbotron">
-        <h1>xCoder</h1>
+        <h1>Zakirul Islam</h1>
         <p class="lead">Among these, of our project, which one would you like ?</p>
-        <p><a class="btn btn-lg btn-success" href="mailto:support@xcoder.io" role="button">Wanna Reach us!</a></p>
+        <p><a class="btn btn-lg btn-success" href="mailto:support@zakirul.com" role="button">Wanna Reach us!</a></p>
       </div>
 
       <div class="row">
@@ -67,7 +67,7 @@
 </div>
 <hr>
       <footer class="footer text-center">
-        <p>&copy; 2016 xCoder.io.</p>
+        <p>&copy; 2000 - 2017 zakirul.com</p>
       </footer>
 		</div>
     </div> <!-- /container -->
